# calculate-tank-caps

./: CMakeLists.txt  README.md  SoftwareRequirementSpecification.md  calculate-capacitors.cpp  calculate-capacitors.hpp  capacitors-spec.json  main.cpp
include/: Capacitors.hpp  MemoryMngr.h  MonitorDecorator.hpp  TankCalculator.hpp
src/: Capacitors.cpp  MemoryMngr.cpp  MonitorDecorator.cpp  TankCalculator.cpp
tests/: max_current.py  test.py
